[gd_scene load_steps=32 format=3 uid="uid://3txoxcmhlqf4"]

[ext_resource type="Script" uid="uid://ds8mpidl03flq" path="res://scripts/managers/game_manager.gd" id="1_4w45t"]
[ext_resource type="Script" uid="uid://cj36cjoo4751e" path="res://scripts/managers/api_manager.gd" id="1_58gk3"]
[ext_resource type="Script" uid="uid://dfyjdsog1fy7v" path="res://scripts/ui/ui_item_manager.gd" id="1_pu3yx"]
[ext_resource type="PackedScene" uid="uid://hhwydbml1pxj" path="res://scenes/templates/item_template.tscn" id="1_si52b"]
[ext_resource type="Texture2D" uid="uid://4121s6jxng6r" path="res://assets/textures/ui/inventory/inventory_grid.png" id="1_w2twt"]
[ext_resource type="Script" uid="uid://c1wrfovotnets" path="res://scripts/ui/ui_manager.gd" id="2_e1cbu"]
[ext_resource type="Script" uid="uid://d0q6asix6qkpp" path="res://scripts/ui/ui_inventory.gd" id="2_gubc5"]
[ext_resource type="Material" uid="uid://fs2qwxy2iiwe" path="res://assets/materials/outline/outline_shader_material.tres" id="2_rt2n2"]
[ext_resource type="Script" uid="uid://1wnn8i14qql1" path="res://scripts/ui/ui_level_display.gd" id="7_c16ls"]
[ext_resource type="Script" uid="uid://4v4lxtijmd7q" path="res://scripts/managers/event_manager.gd" id="7_k6f3i"]
[ext_resource type="Texture2D" uid="uid://cyhrrm78wnk3i" path="res://assets/textures/ui/icons/unknown_event.png" id="8_6wevv"]
[ext_resource type="Script" uid="uid://bymfoc07b35y1" path="res://scripts/managers/fight_manager.gd" id="8_k6f3i"]
[ext_resource type="Texture2D" uid="uid://cxr3y6hsmbuka" path="res://assets/textures/ui/icons/connection.png" id="9_e1cbu"]
[ext_resource type="Texture2D" uid="uid://djyggohcy4eh0" path="res://assets/textures/ui/icons/linear_connection.png" id="10_4w45t"]
[ext_resource type="Material" uid="uid://con2a3dyhm53r" path="res://assets/materials/background/warped_fractal_noise_shader_material.tres" id="10_k3g67"]
[ext_resource type="Texture2D" uid="uid://ctm71hnsrhqk5" path="res://assets/textures/ui/icons/pvp_fight.png" id="10_mngbo"]
[ext_resource type="Material" uid="uid://dcofqc06xashp" path="res://assets/materials/stylized_text/stylized_text_material.tres" id="11_adb74"]
[ext_resource type="Texture2D" uid="uid://cyx3o12vj6th" path="res://assets/textures/ui/inventory/storage_grid.png" id="12_mngbo"]
[ext_resource type="Script" uid="uid://sgws6qjtv6mk" path="res://scripts/managers/game_file_verifier.gd" id="13_4w45t"]
[ext_resource type="Texture2D" uid="uid://dtxk2qqwssgoa" path="res://assets/textures/ui/inventory/trash.png" id="14_r6p65"]
[ext_resource type="PackedScene" uid="uid://cn2vgqp0itllx" path="res://scenes/templates/health_display.tscn" id="21_adb74"]
[ext_resource type="Texture2D" uid="uid://cjoeqqi3l8tn6" path="res://assets/textures/ui/panels/reward.png" id="21_xdqt8"]
[ext_resource type="Texture2D" uid="uid://b2th63ddi0c0x" path="res://assets/textures/ui/buttons/fullscreen.png" id="22_58gk3"]
[ext_resource type="Texture2D" uid="uid://ym7h21v3n83x" path="res://assets/textures/ui/buttons/fullscreen_hover.png" id="23_to7gp"]
[ext_resource type="Script" uid="uid://dxp8jqaq12ajw" path="res://scripts/ui/buttons/ui_visibility_toggler_button.gd" id="24_6p3nn"]
[ext_resource type="Texture2D" uid="uid://cjmo8luusqxxe" path="res://assets/textures/ui/buttons/settings.png" id="24_u0fll"]
[ext_resource type="Texture2D" uid="uid://dw0i3rkpjebch" path="res://assets/textures/ui/buttons/settings_hover.png" id="25_6p3nn"]
[ext_resource type="Script" uid="uid://jkyph3ogaoex" path="res://scripts/ui/buttons/ui_fullscreen_toggle_button.gd" id="27_k67gn"]
[ext_resource type="Texture2D" uid="uid://dkm1yugpqapdj" path="res://assets/textures/ui/buttons/background.png" id="29_02d50"]
[ext_resource type="Texture2D" uid="uid://b7tev672m2q6i" path="res://assets/textures/ui/buttons/background_hover.png" id="30_pgk25"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_02d50"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
spread = 180.0
initial_velocity_min = 4.0
initial_velocity_max = 24.0
gravity = Vector3(0, 0, 0)
turbulence_enabled = true

[node name="main_scene" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -224.0
offset_top = -128.0
offset_right = 224.0
offset_bottom = 126.0

[node name="APIManager" type="Node" parent="." node_paths=PackedStringArray("game_manager", "player_inventory")]
script = ExtResource("1_58gk3")
game_manager = NodePath("../GameManager")
player_inventory = NodePath("../PanelContainer Player Inventory")
metadata/_custom_type_script = "uid://cj36cjoo4751e"

[node name="GameFileVerifier" type="Node" parent="."]
script = ExtResource("13_4w45t")
metadata/_custom_type_script = "uid://sgws6qjtv6mk"

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("game_file_verifier")]
script = ExtResource("1_4w45t")
game_file_verifier = NodePath("../GameFileVerifier")
metadata/_custom_type_script = "uid://ds8mpidl03flq"

[node name="UIManager" type="Node" parent="." node_paths=PackedStringArray("player_label", "event_container", "event_connection_1", "event_icon_1", "event_connection_2", "event_icon_2", "event_connection_3", "event_icon_3")]
script = ExtResource("2_e1cbu")
player_label = NodePath("../Label Player name")
event_container = NodePath("../Control Proceed/HBoxContainer")
event_connection_1 = NodePath("../Control Proceed/HBoxContainer/TextureRect Event connection 1")
event_icon_1 = NodePath("../Control Proceed/HBoxContainer/TextureRect Event Icon 1")
event_connection_2 = NodePath("../Control Proceed/HBoxContainer/TextureRect Event connection 2")
event_icon_2 = NodePath("../Control Proceed/HBoxContainer/TextureRect Event Icon 2")
event_connection_3 = NodePath("../Control Proceed/HBoxContainer/TextureRect Event connection 3")
event_icon_3 = NodePath("../Control Proceed/HBoxContainer/TextureRect Event Icon 3")
metadata/_custom_type_script = "uid://c1wrfovotnets"

[node name="UIItemManager" type="Node2D" parent="." node_paths=PackedStringArray("trash_inventory", "drag_effect_particles")]
position = Vector2(16, -8)
script = ExtResource("1_pu3yx")
outline_material = ExtResource("2_rt2n2")
item_template = ExtResource("1_si52b")
trash_inventory = NodePath("../TextureButton Trash")
drag_effect_particles = NodePath("CPUParticles2D")

[node name="CPUParticles2D" type="GPUParticles2D" parent="UIItemManager"]
z_index = 1
position = Vector2(-16, 8)
amount = 4
lifetime = 0.5
explosiveness = 0.25
randomness = 0.25
process_material = SubResource("ParticleProcessMaterial_02d50")

[node name="EventManager" type="Node2D" parent="." node_paths=PackedStringArray("camera", "api_manager", "game_manager", "fight_manager", "event_choice_container", "event_reward_container", "event_reward_center", "event_reward_roll_parent", "event_reward_label", "event_reward_take_button", "event_reward_gamble_button", "event_button_1", "event_button_2", "event_button_3", "proceed_button", "trash_inventory", "player_inventory", "player_storage", "enemy_inventory", "enemy_label", "default_camera_position", "fight_camera_position", "fight_label", "event_parent", "background")]
position = Vector2(16, -8)
script = ExtResource("7_k6f3i")
camera = NodePath("../Camera2D")
api_manager = NodePath("../APIManager")
game_manager = NodePath("../GameManager")
fight_manager = NodePath("../FightManager")
event_choice_container = NodePath("../VBoxContainer Event selection")
event_reward_container = NodePath("../TextureRect Reward")
event_reward_center = NodePath("../TextureRect Reward/Control Center")
event_reward_roll_parent = NodePath("../TextureRect Reward/Control Center/Control Roll parent")
event_reward_label = NodePath("../TextureRect Reward/Label")
event_reward_take_button = NodePath("../TextureRect Reward/Button Take")
event_reward_gamble_button = NodePath("../TextureRect Reward/Button Gamble")
event_button_1 = NodePath("../VBoxContainer Event selection/Button Event 1")
event_button_2 = NodePath("../VBoxContainer Event selection/Button Event 2")
event_button_3 = NodePath("../VBoxContainer Event selection/Button Event 3")
proceed_button = NodePath("../Control Proceed/Button Proceed")
trash_inventory = NodePath("../TextureButton Trash")
player_inventory = NodePath("../PanelContainer Player Inventory")
player_storage = NodePath("../PanelContainer Storage")
enemy_inventory = NodePath("../PanelContainer Enemy Inventory")
enemy_label = NodePath("../Label Enemy name")
default_camera_position = NodePath("../Control Default camera position")
fight_camera_position = NodePath("../Control Fight camera position")
fight_label = NodePath("../Label Fight label")
event_parent = NodePath("../Control Event parent")
background = NodePath("../Camera2D/TextureRect Background")
metadata/_custom_type_script = "uid://4v4lxtijmd7q"

[node name="FightManager" type="Node" parent="." node_paths=PackedStringArray("player_inventory", "enemy_inventory", "player_health_display", "enemy_health_display")]
script = ExtResource("8_k6f3i")
player_inventory = NodePath("../PanelContainer Player Inventory")
enemy_inventory = NodePath("../PanelContainer Enemy Inventory")
player_health_display = NodePath("../Control Player health")
enemy_health_display = NodePath("../Control Enemy health")
metadata/_custom_type_script = "uid://bymfoc07b35y1"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(224, 128)
zoom = Vector2(2.571, 2.571)

[node name="TextureRect Background" type="ColorRect" parent="Camera2D"]
z_index = -1000
material = ExtResource("10_k3g67")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -126.0
offset_right = 224.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer Player Inventory" type="TextureRect" parent="."]
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -111.0
offset_right = -16.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_w2twt")
stretch_mode = 1
script = ExtResource("2_gubc5")

[node name="Label Player name" type="Label" parent="."]
material = ExtResource("11_adb74")
layout_mode = 1
anchors_preset = -1
anchor_top = 0.031496063
anchor_bottom = 0.031496063
offset_left = 16.0
offset_top = 94.0
offset_right = 208.0
offset_bottom = 108.0
metadata/_edit_use_anchors_ = true

[node name="PanelContainer Enemy Inventory" type="TextureRect" parent="."]
visible = false
z_as_relative = false
layout_mode = 1
anchors_preset = -1
offset_left = 240.0
offset_top = 16.0
offset_right = 432.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_w2twt")
stretch_mode = 1
script = ExtResource("2_gubc5")
metadata/_edit_use_anchors_ = true

[node name="Label Enemy name" type="Label" parent="."]
modulate = Color(0.7058824, 0.1254902, 0.16470589, 1)
material = ExtResource("11_adb74")
layout_mode = 1
anchors_preset = -1
anchor_top = 0.031496063
anchor_bottom = 0.031496063
offset_left = 240.0
offset_top = 94.0
offset_right = 432.0
offset_bottom = 108.0
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="PanelContainer Storage" type="TextureRect" parent="."]
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = 1.0
offset_right = -16.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("12_mngbo")
stretch_mode = 1
script = ExtResource("2_gubc5")

[node name="VBoxContainer Event selection" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 34.0
offset_right = 432.0
offset_bottom = 130.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer Event selection"]
material = ExtResource("11_adb74")
layout_mode = 2
text = "Choose event"
horizontal_alignment = 1

[node name="Button Event 1" type="Button" parent="VBoxContainer Event selection"]
material = ExtResource("11_adb74")
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
toggle_mode = true
text = "Event 1"

[node name="TextureRect Event Icon" type="TextureRect" parent="VBoxContainer Event selection/Button Event 1"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 128.0
offset_right = 144.0
offset_bottom = 16.0

[node name="Button Event 2" type="Button" parent="VBoxContainer Event selection"]
material = ExtResource("11_adb74")
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
toggle_mode = true
text = "Event 2"

[node name="TextureRect Event Icon" type="TextureRect" parent="VBoxContainer Event selection/Button Event 2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 128.0
offset_right = 144.0
offset_bottom = 16.0

[node name="Button Event 3" type="Button" parent="VBoxContainer Event selection"]
material = ExtResource("11_adb74")
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
focus_neighbor_bottom = NodePath("../../Control Proceed/Button Proceed")
toggle_mode = true
text = "Event 3"

[node name="TextureRect Event Icon" type="TextureRect" parent="VBoxContainer Event selection/Button Event 3"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 128.0
offset_right = 144.0
offset_bottom = 16.0

[node name="Control Proceed" type="Control" parent="."]
anchors_preset = 0
offset_left = 288.0
offset_top = 142.0
offset_right = 432.0
offset_bottom = 222.0
mouse_filter = 2

[node name="Button Proceed" type="Button" parent="Control Proceed"]
material = ExtResource("11_adb74")
layout_mode = 0
offset_left = 16.0
offset_top = 50.0
offset_right = 128.0
offset_bottom = 66.0
focus_neighbor_top = NodePath("../../VBoxContainer Event selection/Button Event 3")
text = "Proceed"

[node name="HBoxContainer" type="HBoxContainer" parent="Control Proceed"]
layout_mode = 0
offset_left = 8.0
offset_top = 80.0
offset_right = 124.0
offset_bottom = 96.0

[node name="TextureRect Event connection 1" type="TextureRect" parent="Control Proceed/HBoxContainer"]
layout_mode = 2
texture = ExtResource("9_e1cbu")

[node name="TextureRect Event Icon 1" type="TextureRect" parent="Control Proceed/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_6wevv")

[node name="TextureRect Event connection 2" type="TextureRect" parent="Control Proceed/HBoxContainer"]
layout_mode = 2
texture = ExtResource("9_e1cbu")

[node name="TextureRect Event Icon 2" type="TextureRect" parent="Control Proceed/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_6wevv")

[node name="TextureRect Event connection 3" type="TextureRect" parent="Control Proceed/HBoxContainer"]
layout_mode = 2
texture = ExtResource("10_4w45t")

[node name="TextureRect Event Icon 3" type="TextureRect" parent="Control Proceed/HBoxContainer"]
layout_mode = 2
texture = ExtResource("10_mngbo")

[node name="Label Level" type="Label" parent="Control Proceed/HBoxContainer/TextureRect Event Icon 3"]
layout_mode = 0
offset_left = 20.0
offset_right = 26.0
offset_bottom = 14.0
text = "0"
horizontal_alignment = 1
script = ExtResource("7_c16ls")

[node name="TextureButton Trash" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 128.0
offset_right = 272.0
offset_bottom = 176.0
texture = ExtResource("14_r6p65")
script = ExtResource("2_gubc5")
container_size = Vector2i(3, 5)
metadata/_edit_use_anchors_ = true

[node name="TextureRect Reward" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 288.0
offset_top = 14.0
offset_right = 434.0
offset_bottom = 96.0
texture = ExtResource("21_xdqt8")

[node name="Control Center" type="Control" parent="TextureRect Reward"]
z_index = 4
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -40.0
offset_right = 73.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(73, 40)

[node name="Control Roll parent" type="Control" parent="TextureRect Reward/Control Center"]
anchors_preset = 0
offset_left = 73.0
offset_top = 40.0
offset_right = 74.0
offset_bottom = 40.0

[node name="Button Take" type="Button" parent="TextureRect Reward"]
material = ExtResource("11_adb74")
layout_mode = 0
offset_top = 98.0
offset_right = 64.0
offset_bottom = 114.0
text = "Take"

[node name="Button Gamble" type="Button" parent="TextureRect Reward"]
material = ExtResource("11_adb74")
layout_mode = 0
offset_left = 80.0
offset_top = 98.0
offset_right = 144.0
offset_bottom = 114.0
text = "Reroll"

[node name="Label" type="Label" parent="TextureRect Reward"]
layout_mode = 0
offset_top = 114.0
offset_right = 144.0
offset_bottom = 178.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Control Default camera position" type="Control" parent="."]
anchors_preset = 0
offset_left = 224.0
offset_top = 128.0
offset_right = 224.0
offset_bottom = 128.0
metadata/_edit_use_anchors_ = true

[node name="Control Fight camera position" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.027559055
anchor_bottom = 0.027559055
offset_left = 224.0
offset_top = -18.0
offset_right = 224.0
offset_bottom = -18.0
metadata/_edit_use_anchors_ = true

[node name="Marker2D Fight camera top edge" type="Marker2D" parent="."]
position = Vector2(224, -146)

[node name="Control Player health" parent="." instance=ExtResource("21_adb74")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.035714287
anchor_top = -0.031496063
anchor_right = 0.035714287
anchor_bottom = -0.031496063
offset_left = 0.0
offset_top = 0.0
offset_right = 192.0
offset_bottom = 4.0

[node name="Control Enemy health" parent="." instance=ExtResource("21_adb74")]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.031496063
anchor_bottom = -0.031496063
offset_left = 240.0
offset_top = 0.0
offset_right = 432.0
offset_bottom = 4.0

[node name="Label Fight label" type="RichTextLabel" parent="."]
material = ExtResource("11_adb74")
layout_mode = 0
offset_left = 288.0
offset_top = 16.0
offset_right = 432.0
offset_bottom = 176.0
mouse_filter = 2
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Control Event parent" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 288.0
offset_top = 16.0
offset_right = 432.0
offset_bottom = 176.0
mouse_filter = 2

[node name="TextureButton Settings" type="TextureButton" parent="." node_paths=PackedStringArray("target_controls")]
layout_mode = 0
offset_left = 16.0
offset_top = 224.0
offset_right = 32.0
offset_bottom = 240.0
toggle_mode = true
texture_normal = ExtResource("24_u0fll")
texture_hover = ExtResource("25_6p3nn")
script = ExtResource("24_6p3nn")
target_controls = [NodePath("../TextureButton Fullscreen"), NodePath("../TextureButton Background")]

[node name="TextureButton Fullscreen" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 224.0
offset_right = 64.0
offset_bottom = 240.0
texture_normal = ExtResource("22_58gk3")
texture_hover = ExtResource("23_to7gp")
script = ExtResource("27_k67gn")

[node name="TextureButton Background" type="TextureButton" parent="." node_paths=PackedStringArray("target_controls")]
layout_mode = 0
offset_left = 80.0
offset_top = 224.0
offset_right = 96.0
offset_bottom = 240.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("29_02d50")
texture_hover = ExtResource("30_pgk25")
script = ExtResource("24_6p3nn")
target_controls = [NodePath("../Camera2D/TextureRect Background")]

[connection signal="event_changed_singal" from="GameManager" to="UIManager" method="_event_changed_callback"]
[connection signal="event_changed_singal" from="GameManager" to="EventManager" method="_event_changed_callback"]
[connection signal="level_increased_signal" from="GameManager" to="PanelContainer Player Inventory" method="_on_game_manager_level_increased_signal"]
[connection signal="level_increased_signal" from="GameManager" to="PanelContainer Storage" method="_on_game_manager_level_increased_signal"]
[connection signal="level_increased_signal" from="GameManager" to="Control Proceed/HBoxContainer/TextureRect Event Icon 3/Label Level" method="_level_increased_callback"]
[connection signal="pressed" from="Control Proceed/Button Proceed" to="GameManager" method="advance_event"]
